--- a/20240718 table.html
+++ b/20240718 table.html
@@ -182,7 +182,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "member-login-check-uid01-api.php",
+                    url: "http://cychenwork1.free.nf/server_test_html/api/member-login-check-uid01-api.php",
                     data: JSON.stringify(dataJSON),
                     dataType: "json",
                     success: showdata_check_uid,
@@ -227,7 +227,7 @@
 
             $.ajax({
                 type: "GET",
-                url: "20240716 read_v2.php",
+                url: "http://cychenwork1.free.nf/server_test_html/api/20240716%20read_v2.php",
                 dataType: "json",
                 async: false,
                 success: showdata_read,
@@ -345,7 +345,7 @@
 
                     $.ajax({
                         type: "POST",
-                        url: "20240716 update.php",
+                        url: "http://cychenwork1.free.nf/server_test_html/api/20240716%20update.php",
                         data: JSON.stringify(dataJSON),
                         contentType: "application/json,charset=utf-8",
                         dataType: "json",
@@ -383,7 +383,7 @@
 
                     $.ajax({
                         type: "POST",
-                        url: "20240718 delete.php",
+                        url: "http://cychenwork1.free.nf/server_test_html/api/20240718%20delete.php",
                         data: JSON.stringify(dataJSON),
                         contentType: "application/json,charset=utf-8",
                         dataType: "json",
