--- a/20240718 product.html
+++ b/20240718 product.html
@@ -193,7 +193,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "http://cychenwork1.free.nf/server_test_html/api/member-login-check-uid01-api.php",
+                    url: "https://cychenwork1.free.nf/server_test_html/api/member-login-check-uid01-api.php",
                     data: JSON.stringify(dataJSON),
                     dataType: "json",
                     success: showdata_check_uid,
@@ -343,7 +343,7 @@
                     console.log(JSON.stringify(dataJSON));
                     $.ajax({
                         type: "POST",
-                        url: "http://cychenwork1.free.nf/server_test_html/api/20240716%20create_v3.php",
+                        url: "https://cychenwork1.free.nf/server_test_html/api/20240716%20create_v3.php",
                         data: JSON.stringify(dataJSON),
                         contentType: "application/json,charset=utf-8",
                         dataType: "json",
