--- a/20240730 hotel.html
+++ b/20240730 hotel.html
@@ -935,7 +935,7 @@
             //讀取出團資料
             $.ajax({
                 type: "GET",
-                url: "http://cychenwork1.free.nf/server_test_html/api/20240716%20read_v2.php",
+                url: "https://cychenwork1.free.nf/server_test_html/api/20240716%20read_v2.php",
                 dataType: "json",
                 success: save_product,
                 error: function () {
@@ -952,7 +952,7 @@
 
                     $.ajax({
                         type: "POST",
-                        url: "http://cychenwork1.free.nf/server_test_html/api/member-register-checkuni-api.php",
+                        url: "https://cychenwork1.free.nf/server_test_html/api/member-register-checkuni-api.php",
                         data: JSON.stringify(dataJSON),
                         dataType: "json",
                         success: showdata_checkuni,
@@ -1046,7 +1046,7 @@
 
                     $.ajax({
                         type: "POST",
-                        url: "http://cychenwork1.free.nf/server_test_html/api/member-register-api.php",
+                        url: "https://cychenwork1.free.nf/server_test_html/api/member-register-api.php",
                         data: JSON.stringify(reg_dataJSON),
                         dataType: "json",
                         success: showdata_reg,
@@ -1156,7 +1156,7 @@
                     console.log(JSON.stringify(reg_dataJSON));
                     $.ajax({
                         type: "POST",
-                        url: "http://cychenwork1.free.nf/server_test_html/api/20240716%20create_order.php",
+                        url: "https://cychenwork1.free.nf/server_test_html/api/20240716%20create_order.php",
                         data: JSON.stringify(reg_dataJSON),
                         dataType: "json",
                         success: showdata_create_order,
@@ -1195,7 +1195,7 @@
 
                     $.ajax({
                         type: "POST",
-                        url: "http://cychenwork1.free.nf/server_test_html/api/member-login-api.php",
+                        url: "https://cychenwork1.free.nf/server_test_html/api/member-login-api.php",
                         data: JSON.stringify(dataJSON),
                         dataType: "json",
                         success: showdata_login,
@@ -1220,7 +1220,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "http://cychenwork1.free.nf/server_test_html/api/member-login-check-uid01-api.php",
+                    url: "https://cychenwork1.free.nf/server_test_html/api/member-login-check-uid01-api.php",
                     data: JSON.stringify(dataJSON),
                     dataType: "json",
                     success: showdata_check_uid,
