--- a/20240827 chart.html
+++ b/20240827 chart.html
@@ -169,7 +169,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "http://cychenwork1.free.nf/server_test_html/api/member-login-check-uid01-api.php",
+                    url: "https://cychenwork1.free.nf/server_test_html/api/member-login-check-uid01-api.php",
                     data: JSON.stringify(dataJSON),
                     dataType: "json",
                     success: showdata_check_uid,
@@ -421,7 +421,7 @@
                 var dataJSON = { month: month };
                 let request = $.ajax({
                     type: "POST",
-                    url: "http://cychenwork1.free.nf/server_test_html/api/member-chart-month-rev-api.php",
+                    url: "https://cychenwork1.free.nf/server_test_html/api/member-chart-month-rev-api.php",
                     data: JSON.stringify(dataJSON),
                     dataType: "json",
                     success: function (response) {
@@ -493,7 +493,7 @@
 
                 $.ajax({
                     type: "GET",
-                    url: "http://cychenwork1.free.nf/server_test_html/api/member-chart-level-api.php",
+                    url: "https://cychenwork1.free.nf/server_test_html/api/member-chart-level-api.php",
                     dataType: "json",
                     success: showdata_chart,
                     error: function (xhr, ajaxOptions, thrownError) {
@@ -504,7 +504,7 @@
 
                 $.ajax({
                     type: "GET",
-                    url: "http://cychenwork1.free.nf/server_test_html/api/member-chart-city-api.php",
+                    url: "https://cychenwork1.free.nf/server_test_html/api/member-chart-city-api.php",
                     dataType: "json",
                     success: showdata_citys,
                     error: function (xhr, ajaxOptions, thrownError) {
@@ -515,7 +515,7 @@
 
                 $.ajax({
                     type: "GET",
-                    url: "http://cychenwork1.free.nf/server_test_html/api/member-chart-membercount-api.php",
+                    url: "https://cychenwork1.free.nf/server_test_html/api/member-chart-membercount-api.php",
                     dataType: "json",
                     success: showdata_members,
                     error: function (xhr, ajaxOptions, thrownError) {
@@ -529,7 +529,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "http://cychenwork1.free.nf/server_test_html/api/member-chart-month-rev-api.php",
+                    url: "https://cychenwork1.free.nf/server_test_html/api/member-chart-month-rev-api.php",
                     data: JSON.stringify(dataJSON),
                     dataType: "json",
                     success: showdata_month_rev,
@@ -541,7 +541,7 @@
 
                 $.ajax({
                     type: "GET",
-                    url: "http://cychenwork1.free.nf/server_test_html/api/member-chart-year-rev-api.php",
+                    url: "https://cychenwork1.free.nf/server_test_html/api/member-chart-year-rev-api.php",
                     dataType: "json",
                     success: showdata_year_rev,
                     error: function (xhr, ajaxOptions, thrownError) {
