--- a/20240730 hotel.html
+++ b/20240730 hotel.html
@@ -936,7 +936,7 @@
             //讀取出團資料
             $.ajax({
                 type: "GET",
-                url: "http://cychenwork1.free.nf/server_test_html/api/20240716%20read_v2.php",
+                url: "https://cychenwork1.free.nf/server_test_html/api/20240716%20read_v2.php",
                 dataType: "json",
                 success: save_product,
                 error: function () {
@@ -953,7 +953,7 @@
 
                     $.ajax({
                         type: "POST",
-                        url: "http://cychenwork1.free.nf/server_test_html/api/member-register-checkuni-api.php",
+                        url: "https://cychenwork1.free.nf/server_test_html/api/member-register-checkuni-api.php",
                         data: JSON.stringify(dataJSON),
                         dataType: "json",
                         success: showdata_checkuni,
@@ -1047,7 +1047,7 @@
 
                     $.ajax({
                         type: "POST",
-                        url: "http://cychenwork1.free.nf/server_test_html/api/member-register-api.php",
+                        url: "https://cychenwork1.free.nf/server_test_html/api/member-register-api.php",
                         data: JSON.stringify(reg_dataJSON),
                         dataType: "json",
                         success: showdata_reg,
@@ -1157,7 +1157,7 @@
                     console.log(JSON.stringify(reg_dataJSON));
                     $.ajax({
                         type: "POST",
-                        url: "http://cychenwork1.free.nf/server_test_html/api/20240716%20create_order.php",
+                        url: "https://cychenwork1.free.nf/server_test_html/api/20240716%20create_order.php",
                         data: JSON.stringify(reg_dataJSON),
                         dataType: "json",
                         success: showdata_create_order,
@@ -1196,7 +1196,7 @@
 
                     $.ajax({
                         type: "POST",
-                        url: "http://cychenwork1.free.nf/server_test_html/api/member-login-api.php",
+                        url: "https://cychenwork1.free.nf/server_test_html/api/member-login-api.php",
                         data: JSON.stringify(dataJSON),
                         dataType: "json",
                         success: showdata_login,
@@ -1221,7 +1221,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "http://cychenwork1.free.nf/server_test_html/api/member-login-check-uid01-api.php",
+                    url: "https://cychenwork1.free.nf/server_test_html/api/member-login-check-uid01-api.php",
                     data: JSON.stringify(dataJSON),
                     dataType: "json",
                     success: showdata_check_uid,
